--- a/src/app/pages/layout/cart/cart.component.html
+++ b/src/app/pages/layout/cart/cart.component.html
@@ -22,6 +22,86 @@
           <button>Xóa</button>
         </div>
       </div>
+      <div class="cart-row">
+        <img src="assets/product/ao.png" alt="ao">
+        <div class="information">
+          <div class="product-name">
+            <h3>Áo thun nam</h3>
+          </div>
+          <div class="product-price">
+            <h3>Giá: 100.000đ</h3>
+          </div>
+          <div class="product-quantity">
+            <input type="number" value="1">
+          </div>
+          <div class="product-total">
+            <h3>100.000đ</h3>
+          </div>
+        </div>
+        <div class="product-remove">
+          <button>Xóa</button>
+        </div>
+      </div>
+      <div class="cart-row">
+        <img src="assets/product/ao.png" alt="ao">
+        <div class="information">
+          <div class="product-name">
+            <h3>Áo thun nam</h3>
+          </div>
+          <div class="product-price">
+            <h3>Giá: 100.000đ</h3>
+          </div>
+          <div class="product-quantity">
+            <input type="number" value="1">
+          </div>
+          <div class="product-total">
+            <h3>100.000đ</h3>
+          </div>
+        </div>
+        <div class="product-remove">
+          <button>Xóa</button>
+        </div>
+      </div>
+      <div class="cart-row">
+        <img src="assets/product/ao.png" alt="ao">
+        <div class="information">
+          <div class="product-name">
+            <h3>Áo thun nam</h3>
+          </div>
+          <div class="product-price">
+            <h3>Giá: 100.000đ</h3>
+          </div>
+          <div class="product-quantity">
+            <input type="number" value="1">
+          </div>
+          <div class="product-total">
+            <h3>100.000đ</h3>
+          </div>
+        </div>
+        <div class="product-remove">
+          <button>Xóa</button>
+        </div>
+      </div>
+      <div class="cart-row">
+        <img src="assets/product/ao.png" alt="ao">
+        <div class="information">
+          <div class="product-name">
+            <h3>Áo thun nam</h3>
+          </div>
+          <div class="product-price">
+            <h3>Giá: 100.000đ</h3>
+          </div>
+          <div class="product-quantity">
+            <input type="number" value="1">
+          </div>
+          <div class="product-total">
+            <h3>100.000đ</h3>
+          </div>
+        </div>
+        <div class="product-remove">
+          <button>Xóa</button>
+        </div>
+      </div>
     </div>
 
     <div class="price-summary">
