--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,47 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, sans-serif;
-}
-
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #D59CE2;
   color: black;
-  padding: 15px 30px;
 
 }
 
-.navbar-logo a {
-  color: black;
-  font-size: 1.8rem;
-  font-weight: bold;
-  text-decoration: none;
-  font-family: 'Georgia', serif;
-}
-
-.navbar-menu {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-  order: 2; /* Đặt thứ tự cho menu */
-  justify-content: center;
-  align-items: center;
-  li a{
-    cursor: pointer;
-  }
-  li a:hover{
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
-  }
-}
 .navbar-menu a {
   color: black;
   text-decoration: none;
@@ -49,16 +14,20 @@ body {
   font-weight: 500;
 }
 
-
-
 .search-bar {
   display: flex;
   align-items: center;
-  order: 3; /* Đặt thứ tự cho search bar */
   max-width: 400px;
   border: #ff3366 1px solid;
   border-radius: 5px;
 }
+.user{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
+}
+
 
 .search-bar input[type="text"] {
   padding: 8px 12px;
@@ -85,22 +54,28 @@ body {
   display: flex;
   align-items: center;
   gap: 15px;
-  order: 4; /* Đặt thứ tự cho icons */
+
+
 }
 
 .balance {
+  background-color: #e6dcdc;
+  padding: 15px;
   color: black;
   font-size: 0.9rem;
+  border-radius: 15px;
+  border: black 1px solid;
 }
 
 .account-info {
   cursor: pointer;
   display: flex;
   align-items: center;
-  img{
-    width: 50%;
-    height: 100%;
-  }
+}
+
+.account-info img {
+  width: 50%;
+  height: 100%;
 }
 
 .account-info a {
@@ -124,3 +99,158 @@ body {
 .navbar-icons a:hover {
   color: #ff3366;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+
+}
+
+.container {
+  width: 30%;
+  border-radius: 15px;
+  display: flex;
+ justify-content: center;
+}
+
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 62px;
+
+}
+
+.navbar .menu-items {
+  display: flex;
+  margin-top:60px;
+  box-shadow: inset 0 0 2000px rgba(9, 9, 9, 0.5);
+border-right: black 3px solid;
+  border-bottom: black 3px solid;
+  border-radius: 15px;
+
+}
+
+.navbar .nav-container li {
+  list-style: none;
+}
+
+.navbar .nav-container a {
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
+.navbar .nav-container a:hover {
+  font-weight: bolder;
+}
+
+.nav-container {
+  display: block;
+  position: relative;
+  height: 60px;
+}
+
+.nav-container .checkbox {
+  position: absolute;
+  display: block;
+  height: 32px;
+  width: 32px;
+  top: 20px;
+  left: 20px;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.nav-container .hamburger-lines {
+  display: block;
+  height: 26px;
+  width: 32px;
+  position: absolute;
+  top: 17px;
+  left: 20px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.nav-container .hamburger-lines .line {
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 10px;
+  background: #0e2431;
+}
+
+.nav-container .hamburger-lines .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.nav-container .hamburger-lines .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+
+.nav-container .hamburger-lines .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.navbar .menu-items {
+  padding-top: 120px;
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+  height: 91.8vh;
+  background-color: #F8F9FA;
+
+  transform: translate(-150%);
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
+  padding-left: 50px;
+  transition: transform 0.5s ease-in-out;
+  text-align: center;
+}
+
+.navbar .menu-items li {
+  margin-bottom: 1.2rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.logo {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 1.2rem;
+  color: #0e2431;
+}
+
+.nav-container input[type="checkbox"]:checked ~ .menu-items {
+  transform: translateX(0);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+  transform: rotate(45deg);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+  transform: scaleY(0);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+  transform: rotate(-45deg);
+}
+
+
+
