--- a/src/app/pages/layout/cart/cart.component.scss
+++ b/src/app/pages/layout/cart/cart.component.scss
@@ -1,16 +1,17 @@
 .container {
   width: 100%;
-  height: 100vh;
-  background-color: #F0E6F6;
+  height: auto;
+  background-color: #ffffff;
   display: flex;
   justify-content: center;
   padding-top: 20px;
 }
 
 .cart-container {
+  height: auto;
   display: flex;
   width: 80%;
-  background-color: #fff;
+  background-color: #F0E6F6;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -24,18 +25,17 @@
 }
 
 .price-summary {
-  height: auto;
+
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 20px;
-  background-color: #f8f8f8;
   border-radius: 8px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .cart-row {
+  background-color: white;
   display: flex;
   align-items: center;
   margin-bottom: 20px;
